tests/snapshots/e2e__graph@dedup-cluster.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/a.yml<br/>Update foo"]
  wf_1__push[".github/workflows/b.yml<br/>Update bar"]
end
subgraph pull_request
  wf_2__pull_request[".github/workflows/c.yml<br/>Lint PRs"]
end
subgraph workflow_dispatch
  wf_0__workflow_dispatch[".github/workflows/a.yml<br/>Update foo"]
  wf_1__workflow_dispatch[".github/workflows/b.yml<br/>Update bar"]
end
ext_0["actions/cache@v4"]
ext_1["actions/checkout@v4"]
ext_2["actions/setup-node@v4"]
ext_3["peter-evans/create-pull-request@v7"]
wf_0__push --> ext_1
wf_0__push --> ext_3
wf_0__workflow_dispatch --> ext_1
wf_0__workflow_dispatch --> ext_3
wf_1__push --> ext_1
wf_1__push --> ext_3
wf_1__workflow_dispatch --> ext_1
wf_1__workflow_dispatch --> ext_3
wf_2__pull_request --> ext_0
wf_2__pull_request --> ext_2
