tests/snapshots/e2e__graph@docker-action.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>CI"]
  wf_2__push[".github/workflows/release.yml<br/>Release"]
end
subgraph pull_request
  wf_1__pull_request[".github/workflows/lint.yml<br/>Lint"]
end
subgraph workflow_dispatch
  wf_3__workflow_dispatch[".github/workflows/smoke.yml<br/>Smoke"]
end
act_0[".<br/>Synthetic Docker Action"]
act_1[".github/actions/inner<br/>Inner Composite"]
ext_0["actions/checkout@v4"]
wf_0__push --> act_0
wf_0__push --> act_1
wf_0__push --> ext_0
wf_1__pull_request --> act_1
wf_1__pull_request --> ext_0
wf_2__push --> act_0
wf_2__push --> ext_0
wf_3__workflow_dispatch --> act_0
wf_3__workflow_dispatch --> ext_0
