tests/snapshots/e2e__graph@docker-uses-workflow.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>CI"]
end
ext_0["actions/checkout@v4"]
dock_0["alpine:3.20"]
wf_0__push --> dock_0
wf_0__push --> ext_0
