tests/snapshots/e2e__graph@dynamic-matrix-from-json.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/test.yml<br/>Test"]
end
subgraph workflow_dispatch
  wf_0__workflow_dispatch[".github/workflows/test.yml<br/>Test"]
end
ext_0["actions/checkout@v4"]
wf_0__push --> ext_0
wf_0__workflow_dispatch --> ext_0
