tests/snapshots/e2e__graph@environment-deployment.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/publish.yml<br/>Publish"]
end
subgraph workflow_dispatch
  wf_0__workflow_dispatch[".github/workflows/publish.yml<br/>Publish"]
end
ext_0["actions/checkout@v4"]
wf_0__push --> ext_0
wf_0__workflow_dispatch --> ext_0
