tests/snapshots/e2e__graph@extract-local-refs.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/a.yml<br/>A"]
  wf_1__push[".github/workflows/b.yml<br/>B"]
  wf_2__push[".github/workflows/c.yml<br/>C"]
end
wf_3[".github/workflows/reusable.yml<br/>Reusable"]
act_0[".github/actions/setup<br/>setup"]
ext_0["actions/checkout@v4"]
wf_0__push --> act_0
wf_0__push --> ext_0
wf_0__push --> wf_3
wf_1__push --> act_0
wf_1__push --> ext_0
wf_1__push --> wf_3
wf_2__push --> act_0
wf_2__push --> ext_0
wf_2__push --> wf_3
