tests/snapshots/e2e__graph@large-estate.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_12__push[".github/workflows/release.yml<br/>Release"]
  wf_17__push[".github/workflows/test-integration.yml<br/>Test Integration"]
  wf_18__push[".github/workflows/test-unit.yml<br/>Test Unit"]
  wf_4__push[".github/workflows/ci.yml<br/>CI"]
  wf_7__push[".github/workflows/docs.yml<br/>Docs"]
end
subgraph pull_request
  wf_10__pull_request[".github/workflows/lint.yml<br/>Lint"]
  wf_19__pull_request[".github/workflows/typecheck.yml<br/>Typecheck"]
  wf_4__pull_request[".github/workflows/ci.yml<br/>CI"]
  wf_8__pull_request[".github/workflows/format.yml<br/>Format"]
end
subgraph schedule
  wf_11__schedule[".github/workflows/nightly.yml<br/>Nightly"]
  wf_13__schedule[".github/workflows/security.yml<br/>Security"]
  wf_15__schedule[".github/workflows/snapshot.yml<br/>Snapshot"]
  wf_16__schedule[".github/workflows/stale.yml<br/>Stale"]
  wf_20__schedule[".github/workflows/update-cares.yml<br/>Update cares"]
  wf_21__schedule[".github/workflows/update-curl.yml<br/>Update curl"]
  wf_22__schedule[".github/workflows/update-icu.yml<br/>Update icu"]
  wf_23__schedule[".github/workflows/update-libffi.yml<br/>Update libffi"]
  wf_24__schedule[".github/workflows/update-openssl.yml<br/>Update openssl"]
  wf_25__schedule[".github/workflows/update-sqlite.yml<br/>Update sqlite"]
  wf_26__schedule[".github/workflows/update-zlib.yml<br/>Update zlib"]
  wf_27__schedule[".github/workflows/update-zstd.yml<br/>Update zstd"]
  wf_2__schedule[".github/workflows/audit.yml<br/>Audit"]
  wf_3__schedule[".github/workflows/bench.yml<br/>Bench"]
  wf_5__schedule[".github/workflows/codeql.yml<br/>CodeQL"]
end
subgraph workflow_dispatch
  wf_14__workflow_dispatch[".github/workflows/smoke.yml<br/>Smoke"]
  wf_20__workflow_dispatch[".github/workflows/update-cares.yml<br/>Update cares"]
  wf_21__workflow_dispatch[".github/workflows/update-curl.yml<br/>Update curl"]
  wf_22__workflow_dispatch[".github/workflows/update-icu.yml<br/>Update icu"]
  wf_23__workflow_dispatch[".github/workflows/update-libffi.yml<br/>Update libffi"]
  wf_24__workflow_dispatch[".github/workflows/update-openssl.yml<br/>Update openssl"]
  wf_25__workflow_dispatch[".github/workflows/update-sqlite.yml<br/>Update sqlite"]
  wf_26__workflow_dispatch[".github/workflows/update-zlib.yml<br/>Update zlib"]
  wf_27__workflow_dispatch[".github/workflows/update-zstd.yml<br/>Update zstd"]
  wf_6__workflow_dispatch[".github/workflows/dispatch.yml<br/>Dispatch"]
end
subgraph pull_request_target
  wf_9__pull_request_target[".github/workflows/labeler.yml<br/>Labeler"]
end
wf_0[".github/workflows/_reusable-build.yml<br/>Reusable Build"]
wf_1[".github/workflows/_reusable-publish.yml<br/>Reusable Publish"]
act_0[".github/actions/publish-artifact<br/>Publish Artifact"]
act_1[".github/actions/setup-build<br/>Setup Build"]
ext_0["actions/checkout@v4"]
ext_1["actions/dependency-review-action@v4"]
ext_2["actions/labeler@v5"]
ext_3["actions/stale@v9"]
ext_4["github/codeql-action/analyze@v3"]
ext_5["github/codeql-action/init@v3"]
ext_6["peter-evans/create-pull-request@v7"]
wf_0 --> act_1
wf_0 --> ext_0
wf_1 --> act_0
wf_1 --> ext_0
wf_10__pull_request --> ext_0
wf_11__schedule --> act_1
wf_11__schedule --> ext_0
wf_12__push --> wf_1
wf_13__schedule --> ext_0
wf_13__schedule --> ext_1
wf_14__workflow_dispatch --> ext_0
wf_15__schedule --> act_0
wf_15__schedule --> ext_0
wf_16__schedule --> ext_3
wf_17__push --> act_1
wf_17__push --> ext_0
wf_18__push --> act_1
wf_18__push --> ext_0
wf_19__pull_request --> ext_0
wf_20__schedule --> ext_0
wf_20__schedule --> ext_6
wf_20__workflow_dispatch --> ext_0
wf_20__workflow_dispatch --> ext_6
wf_21__schedule --> ext_0
wf_21__schedule --> ext_6
wf_21__workflow_dispatch --> ext_0
wf_21__workflow_dispatch --> ext_6
wf_22__schedule --> ext_0
wf_22__schedule --> ext_6
wf_22__workflow_dispatch --> ext_0
wf_22__workflow_dispatch --> ext_6
wf_23__schedule --> ext_0
wf_23__schedule --> ext_6
wf_23__workflow_dispatch --> ext_0
wf_23__workflow_dispatch --> ext_6
wf_24__schedule --> ext_0
wf_24__schedule --> ext_6
wf_24__workflow_dispatch --> ext_0
wf_24__workflow_dispatch --> ext_6
wf_25__schedule --> ext_0
wf_25__schedule --> ext_6
wf_25__workflow_dispatch --> ext_0
wf_25__workflow_dispatch --> ext_6
wf_26__schedule --> ext_0
wf_26__schedule --> ext_6
wf_26__workflow_dispatch --> ext_0
wf_26__workflow_dispatch --> ext_6
wf_27__schedule --> ext_0
wf_27__schedule --> ext_6
wf_27__workflow_dispatch --> ext_0
wf_27__workflow_dispatch --> ext_6
wf_2__schedule --> ext_0
wf_3__schedule --> act_1
wf_3__schedule --> ext_0
wf_4__pull_request --> wf_0
wf_4__push --> wf_0
wf_5__schedule --> ext_0
wf_5__schedule --> ext_4
wf_5__schedule --> ext_5
wf_6__workflow_dispatch --> ext_0
wf_7__push --> ext_0
wf_8__pull_request --> ext_0
wf_9__pull_request_target --> ext_2
