tests/snapshots/e2e__graph@matrix-heavy.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_1__push[".github/workflows/build.yml<br/>Build"]
  wf_3__push[".github/workflows/coverage.yml<br/>Coverage"]
  wf_6__push[".github/workflows/integration.yml<br/>Integration"]
  wf_9__push[".github/workflows/release.yml<br/>Release"]
end
subgraph pull_request
  wf_11__pull_request[".github/workflows/typecheck.yml<br/>Typecheck"]
  wf_12__pull_request[".github/workflows/unit.yml<br/>Unit"]
  wf_2__pull_request[".github/workflows/contracts.yml<br/>Contracts"]
  wf_4__pull_request[".github/workflows/docs.yml<br/>Docs"]
  wf_7__pull_request[".github/workflows/lint.yml<br/>Lint"]
end
subgraph schedule
  wf_0__schedule[".github/workflows/audit.yml<br/>Audit"]
  wf_5__schedule[".github/workflows/e2e.yml<br/>E2E"]
  wf_8__schedule[".github/workflows/perf.yml<br/>Perf"]
end
subgraph workflow_dispatch
  wf_10__workflow_dispatch[".github/workflows/smoke.yml<br/>Smoke"]
end
ext_0["actions/cache@v4"]
ext_1["actions/checkout@v4"]
ext_2["actions/download-artifact@v4"]
ext_3["actions/setup-go@v5"]
ext_4["actions/setup-node@v4"]
ext_5["actions/setup-python@v5"]
ext_6["actions/upload-artifact@v4"]
ext_7["codecov/codecov-action@v4"]
ext_8["docker/setup-buildx-action@v3"]
ext_9["github/codeql-action/init@v3"]
ext_10["pnpm/action-setup@v4"]
ext_11["softprops/action-gh-release@v2"]
wf_0__schedule --> ext_1
wf_0__schedule --> ext_9
wf_10__workflow_dispatch --> ext_1
wf_10__workflow_dispatch --> ext_3
wf_11__pull_request --> ext_1
wf_11__pull_request --> ext_10
wf_12__pull_request --> ext_0
wf_12__pull_request --> ext_1
wf_1__push --> ext_1
wf_1__push --> ext_4
wf_2__pull_request --> ext_1
wf_2__pull_request --> ext_8
wf_3__push --> ext_1
wf_3__push --> ext_7
wf_4__pull_request --> ext_1
wf_4__pull_request --> ext_6
wf_5__schedule --> ext_1
wf_5__schedule --> ext_4
wf_6__push --> ext_1
wf_6__push --> ext_5
wf_7__pull_request --> ext_1
wf_7__pull_request --> ext_4
wf_8__schedule --> ext_1
wf_8__schedule --> ext_2
wf_9__push --> ext_1
wf_9__push --> ext_11
