tests/snapshots/e2e__graph@mixed-action-types.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>CI"]
end
ext_0["actions/checkout@v4"]
wf_0__push --> ext_0
