tests/snapshots/e2e__graph@multiline-if.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/release.yaml<br/>Multi-line if guard demo"]
end
ext_0["actions/checkout@v4"]
ext_1["actions/upload-artifact@v4"]
wf_0__push --> ext_0
wf_0__push --> ext_1
